open links in new tab

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
   <div class="text-center mx-auto flex-column mb-0 justify-content-center">
     <h1 class="text-white">Book Search</h1>
     <!-- Search Field -->
-    <div class="mx-auto w-75 input-group mb-3 mt-3">
+    <div class="mx-auto w-50 input-group mb-3 mt-3">
       <input data-search-field type="search" class="bg-dark text-white form-control" placeholder="Search a book...">
       <button data-search-button class="btn btn-primary text-white btn-outline-secondary" type="button">Search</button>
     </div>
@@ -23,7 +23,7 @@
           <div class="mt-3 mb-3">
             <div class="card-title lead" data-title></div>
             <div class="card-subtitle" data-author></div>
-            <a class="card-subtitle" data-key></a>
+            <a class="card-subtitle" target="_blank" data-key></a>
           </div>
         </template>
       </div>
