--- a/src/template.html
+++ b/src/template.html
@@ -7,8 +7,9 @@
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <title>Books</title>
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-0evHe/X+R7YkIZDRvuzKMRqM+OrBnVFBL6DOitfPri4tjfHxaWutUpFmBp4vmVor" crossorigin="anonymous">
-  <script defer src="js\script.js"></script>
+  <script type="module" defer src="script.js"></script>
 </head>
+
 <body style="background-color: #101010;">
   <div class="text-center mx-auto flex-column mb-0 justify-content-center">
     <h1 class="text-white">Book Search</h1>
@@ -17,8 +18,7 @@
       <input type="search" class="border border-primary bg-dark text-white form-control" placeholder="Search" data-search-field>
       <button class="border border-primary btn btn-primary text-white btn-outline-secondary" type="button" data-search-button>Search</button>
     </div>
-    <h3 class="text-white" data-searching></h3>
-    <h3 class="text-white" data-no-results></h3>
+    <h3 class="text-white" data-info></h3>
     <h3 class="text-danger" data-error></h3>
     <!-- Books Card -->
       <div class="d-none border border-primary card bg-dark text-white mx-auto w-75 flex-column card-body mb-3" data-book-container>
